// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enzyme.mount 1`] = `
.css-nx51am,
[data-css-nx51am] {
  position: relative;
}

.css-nx51am > div,
[data-css-nx51am] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  position: relative;
  -webkit-animation-fill-mode: both;
}

.css-nx51am > div:before,
[data-css-nx51am] > div:before,
.css-nx51am > div:after,
[data-css-nx51am] > div:after {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  content: '';
  opacity: 0.8;
  position: absolute;
}

.css-nx51am > div:first-child,
[data-css-nx51am] > div:first-child {
  animation: animation_10898qo 1s 0s cubic-bezier(.7,-.13,.22,.86) infinite;
  -webkit-animation: animation_10898qo 1s 0s cubic-bezier(.7,-.13,.22,.86) infinite;
}

.css-nx51am > div:before,
[data-css-nx51am] > div:before {
  left: -28px;
  top: 0px;
}

.css-nx51am > div:after,
[data-css-nx51am] > div:after {
  left: 25px;
  top: 0px;
}

<BallRotate
  loading={true}
>
  <div
    data-css-nx51am=""
  >
    <div />
  </div>
</BallRotate>
`;

exports[`enzyme.render 1`] = `
.css-nx51am,
[data-css-nx51am] {
  position: relative;
}

.css-nx51am > div,
[data-css-nx51am] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  position: relative;
  -webkit-animation-fill-mode: both;
}

.css-nx51am > div:before,
[data-css-nx51am] > div:before,
.css-nx51am > div:after,
[data-css-nx51am] > div:after {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  content: '';
  opacity: 0.8;
  position: absolute;
}

.css-nx51am > div:first-child,
[data-css-nx51am] > div:first-child {
  animation: animation_10898qo 1s 0s cubic-bezier(.7,-.13,.22,.86) infinite;
  -webkit-animation: animation_10898qo 1s 0s cubic-bezier(.7,-.13,.22,.86) infinite;
}

.css-nx51am > div:before,
[data-css-nx51am] > div:before {
  left: -28px;
  top: 0px;
}

.css-nx51am > div:after,
[data-css-nx51am] > div:after {
  left: 25px;
  top: 0px;
}

<div
  data-css-nx51am=""
>
  <div />
</div>
`;

exports[`enzyme.shallow 1`] = `
.css-nx51am,
[data-css-nx51am] {
  position: relative;
}

.css-nx51am > div,
[data-css-nx51am] > div {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  animation-fill-mode: both;
  position: relative;
  -webkit-animation-fill-mode: both;
}

.css-nx51am > div:before,
[data-css-nx51am] > div:before,
.css-nx51am > div:after,
[data-css-nx51am] > div:after {
  border-radius: 100%;
  height: 15px;
  margin: 2px;
  width: 15px;
  background-color: #ffffff;
  content: '';
  opacity: 0.8;
  position: absolute;
}

.css-nx51am > div:first-child,
[data-css-nx51am] > div:first-child {
  animation: animation_10898qo 1s 0s cubic-bezier(.7,-.13,.22,.86) infinite;
  -webkit-animation: animation_10898qo 1s 0s cubic-bezier(.7,-.13,.22,.86) infinite;
}

.css-nx51am > div:before,
[data-css-nx51am] > div:before {
  left: -28px;
  top: 0px;
}

.css-nx51am > div:after,
[data-css-nx51am] > div:after {
  left: 25px;
  top: 0px;
}

<div
  data-css-nx51am=""
>
  <div />
</div>
`;
